daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N19_bad_downgrade/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae301584036f322b464e0fe84de637fca44a3a7d17233c8f3dde7b8239226e1670707936e28f32e619e7c6076cf466f92f15c8ba7039094868a613a57b2e70a192e28dda801f602f6
